--- a/MORRABCV/Presentacion/PaginaMaestra/Site.Master
+++ b/MORRABCV/Presentacion/PaginaMaestra/Site.Master
@@ -73,14 +73,10 @@
                 </div>
             </div>
         </div>--%>
-<%--        <div class="container body-content">
+        <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
-            <hr />
-            <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
-            </footer>
-        </div>--%>
+        </div>
     </form>
 </body>
 </html>
